change dto for project controller